Fix truncateFields

--- a/src/assets/styles/components/qrcode.scss
+++ b/src/assets/styles/components/qrcode.scss
@@ -1,5 +1,6 @@
 .qr-code {
-    
+    margin: 24px;
+
     &__placeholder {
         width: 256px;
         height: 256px;
